# libssp

./: CMakeLists.txt  FindLibUBE.cmake  README.md  arcodec.cpp  arcodec.h  configure.sh  htkfile.cpp  libssp.pc.in  pitch.h  prepare.sh  specplot.cpp  ssp.h  test-ssp-ref.txt  test-ssp.cmake  test-ssp.cpp  varcoder.cpp  waveplot.cpp  wget.sh
cmake/: FindLibSSP.cmake
ssp/: CMakeLists.txt  ar.cpp  ar.h  arcodec.cpp  cochlea.cpp  cochlea.h  filter.cpp  filter.h  htkfile.cpp  pitch.cpp  ssp.cpp  ssp.h  warp.h  window.cpp  window.h
test/: CMakeLists.txt  test-cochlea-ref.txt  test-cochlea.cmake  test-cochlea.cpp  test-ssp-ref.txt  test-ssp.cmake  test-ssp.cpp
